lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     expression -> ID
Rule 4     expression -> INTNUM
Rule 5     expression -> FLOATNUM
Rule 6     expression -> STRING
Rule 7     expression -> - expression
Rule 8     expression -> expression + expression
Rule 9     expression -> expression - expression
Rule 10    expression -> expression * expression
Rule 11    expression -> expression / expression
Rule 12    expression -> expression TRANSPOSE
Rule 13    expression -> ZEROES ( expression )
Rule 14    expression -> EYE ( expression )
Rule 15    expression -> ONES ( expression )
Rule 16    expression -> ID = expression
Rule 17    expression -> ID SUBASSIGN expression
Rule 18    expression -> ID ADDASSIGN expression
Rule 19    expression -> ID MLPASSIGN expression
Rule 20    expression -> ID DIVASSIGN expression
Rule 21    expression -> ID [ expression ] = expression
Rule 22    expression -> ID [ expression ] SUBASSIGN expression
Rule 23    expression -> ID [ expression ] ADDASSIGN expression
Rule 24    expression -> ID [ expression ] MLPASSIGN expression
Rule 25    expression -> ID [ expression ] DIVASSIGN expression
Rule 26    expression -> ID [ expression , expression ] = expression
Rule 27    expression -> ID [ expression , expression ] SUBASSIGN expression
Rule 28    expression -> ID [ expression , expression ] ADDASSIGN expression
Rule 29    expression -> ID [ expression , expression ] MLPASSIGN expression
Rule 30    expression -> ID [ expression , expression ] DIVASSIGN expression
Rule 31    expression -> expression DOTADD expression
Rule 32    expression -> expression DOTSUB expression
Rule 33    expression -> expression DOTMLP expression
Rule 34    expression -> expression DOTDIV expression
Rule 35    expression -> expression EQ expression
Rule 36    expression -> expression NE expression
Rule 37    expression -> expression > expression
Rule 38    expression -> expression GOE expression
Rule 39    expression -> expression < expression
Rule 40    expression -> expression LOE expression
Rule 41    expression -> [ list ]
Rule 42    list -> expression
Rule 43    list -> list , expression
Rule 44    statement_list -> statement
Rule 45    statement_list -> statement_list statement
Rule 46    statement -> { statement_list }
Rule 47    statement -> IF ( expression ) statement
Rule 48    statement -> IF ( expression ) statement ELSE statement
Rule 49    statement -> PRINT list ;
Rule 50    range -> expression : expression
Rule 51    statement -> WHILE ( expression ) statement
Rule 52    statement -> FOR ID = range statement
Rule 53    statement -> BREAK ;
Rule 54    statement -> CONTINUE ;
Rule 55    statement -> RETURN expression ;
Rule 56    statement -> expression ;

Terminals, with rules where they appear

(                    : 13 14 15 47 48 51
)                    : 13 14 15 47 48 51
*                    : 10
+                    : 8
,                    : 26 27 28 29 30 43
-                    : 7 9
/                    : 11
:                    : 50
;                    : 49 53 54 55 56
<                    : 39
=                    : 16 21 26 52
>                    : 37
ADDASSIGN            : 18 23 28
BREAK                : 53
CONTINUE             : 54
DIVASSIGN            : 20 25 30
DOTADD               : 31
DOTDIV               : 34
DOTMLP               : 33
DOTSUB               : 32
ELSE                 : 48
EQ                   : 35
EYE                  : 14
FLOATNUM             : 5
FOR                  : 52
GOE                  : 38
ID                   : 3 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 52
IF                   : 47 48
INTNUM               : 4
LOE                  : 40
MLPASSIGN            : 19 24 29
NE                   : 36
ONES                 : 15
PRINT                : 49
RETURN               : 55
STRING               : 6
SUBASSIGN            : 17 22 27
TRANSPOSE            : 12
WHILE                : 51
ZEROES               : 13
[                    : 21 22 23 24 25 26 27 28 29 30 41
]                    : 21 22 23 24 25 26 27 28 29 30 41
error                : 
{                    : 46
}                    : 46

Nonterminals, with rules where they appear

expression           : 7 8 8 9 9 10 10 11 11 12 13 14 15 16 17 18 19 20 21 21 22 22 23 23 24 24 25 25 26 26 26 27 27 27 28 28 28 29 29 29 30 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 42 43 47 48 50 50 51 55 56
list                 : 41 43 49
program              : 2 0
range                : 52
statement            : 1 2 44 45 47 48 48 51 52
statement_list       : 45 46

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (46) statement -> . { statement_list }
    (47) statement -> . IF ( expression ) statement
    (48) statement -> . IF ( expression ) statement ELSE statement
    (49) statement -> . PRINT list ;
    (51) statement -> . WHILE ( expression ) statement
    (52) statement -> . FOR ID = range statement
    (53) statement -> . BREAK ;
    (54) statement -> . CONTINUE ;
    (55) statement -> . RETURN expression ;
    (56) statement -> . expression ;
    (3) expression -> . ID
    (4) expression -> . INTNUM
    (5) expression -> . FLOATNUM
    (6) expression -> . STRING
    (7) expression -> . - expression
    (8) expression -> . expression + expression
    (9) expression -> . expression - expression
    (10) expression -> . expression * expression
    (11) expression -> . expression / expression
    (12) expression -> . expression TRANSPOSE
    (13) expression -> . ZEROES ( expression )
    (14) expression -> . EYE ( expression )
    (15) expression -> . ONES ( expression )
    (16) expression -> . ID = expression
    (17) expression -> . ID SUBASSIGN expression
    (18) expression -> . ID ADDASSIGN expression
    (19) expression -> . ID MLPASSIGN expression
    (20) expression -> . ID DIVASSIGN expression
    (21) expression -> . ID [ expression ] = expression
    (22) expression -> . ID [ expression ] SUBASSIGN expression
    (23) expression -> . ID [ expression ] ADDASSIGN expression
    (24) expression -> . ID [ expression ] MLPASSIGN expression
    (25) expression -> . ID [ expression ] DIVASSIGN expression
    (26) expression -> . ID [ expression , expression ] = expression
    (27) expression -> . ID [ expression , expression ] SUBASSIGN expression
    (28) expression -> . ID [ expression , expression ] ADDASSIGN expression
    (29) expression -> . ID [ expression , expression ] MLPASSIGN expression
    (30) expression -> . ID [ expression , expression ] DIVASSIGN expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMLP expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NE expression
    (37) expression -> . expression > expression
    (38) expression -> . expression GOE expression
    (39) expression -> . expression < expression
    (40) expression -> . expression LOE expression
    (41) expression -> . [ list ]

    {               shift and go to state 3
    IF              shift and go to state 4
    PRINT           shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    ID              shift and go to state 9
    INTNUM          shift and go to state 13
    FLOATNUM        shift and go to state 14
    STRING          shift and go to state 15
    -               shift and go to state 16
    ZEROES          shift and go to state 17
    EYE             shift and go to state 18
    ONES            shift and go to state 19
    [               shift and go to state 20

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 5

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (46) statement -> . { statement_list }
    (47) statement -> . IF ( expression ) statement
    (48) statement -> . IF ( expression ) statement ELSE statement
    (49) statement -> . PRINT list ;
    (51) statement -> . WHILE ( expression ) statement
    (52) statement -> . FOR ID = range statement
    (53) statement -> . BREAK ;
    (54) statement -> . CONTINUE ;
    (55) statement -> . RETURN expression ;
    (56) statement -> . expression ;
    (3) expression -> . ID
    (4) expression -> . INTNUM
    (5) expression -> . FLOATNUM
    (6) expression -> . STRING
    (7) expression -> . - expression
    (8) expression -> . expression + expression
    (9) expression -> . expression - expression
    (10) expression -> . expression * expression
    (11) expression -> . expression / expression
    (12) expression -> . expression TRANSPOSE
    (13) expression -> . ZEROES ( expression )
    (14) expression -> . EYE ( expression )
    (15) expression -> . ONES ( expression )
    (16) expression -> . ID = expression
    (17) expression -> . ID SUBASSIGN expression
    (18) expression -> . ID ADDASSIGN expression
    (19) expression -> . ID MLPASSIGN expression
    (20) expression -> . ID DIVASSIGN expression
    (21) expression -> . ID [ expression ] = expression
    (22) expression -> . ID [ expression ] SUBASSIGN expression
    (23) expression -> . ID [ expression ] ADDASSIGN expression
    (24) expression -> . ID [ expression ] MLPASSIGN expression
    (25) expression -> . ID [ expression ] DIVASSIGN expression
    (26) expression -> . ID [ expression , expression ] = expression
    (27) expression -> . ID [ expression , expression ] SUBASSIGN expression
    (28) expression -> . ID [ expression , expression ] ADDASSIGN expression
    (29) expression -> . ID [ expression , expression ] MLPASSIGN expression
    (30) expression -> . ID [ expression , expression ] DIVASSIGN expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMLP expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NE expression
    (37) expression -> . expression > expression
    (38) expression -> . expression GOE expression
    (39) expression -> . expression < expression
    (40) expression -> . expression LOE expression
    (41) expression -> . [ list ]

    {               shift and go to state 3
    IF              shift and go to state 4
    PRINT           shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    ID              shift and go to state 9
    INTNUM          shift and go to state 13
    FLOATNUM        shift and go to state 14
    STRING          shift and go to state 15
    -               shift and go to state 16
    ZEROES          shift and go to state 17
    EYE             shift and go to state 18
    ONES            shift and go to state 19
    [               shift and go to state 20

    statement                      shift and go to state 21
    expression                     shift and go to state 5

state 2

    (1) program -> statement .

    {               reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    PRINT           reduce using rule 1 (program -> statement .)
    WHILE           reduce using rule 1 (program -> statement .)
    FOR             reduce using rule 1 (program -> statement .)
    BREAK           reduce using rule 1 (program -> statement .)
    CONTINUE        reduce using rule 1 (program -> statement .)
    RETURN          reduce using rule 1 (program -> statement .)
    ID              reduce using rule 1 (program -> statement .)
    INTNUM          reduce using rule 1 (program -> statement .)
    FLOATNUM        reduce using rule 1 (program -> statement .)
    STRING          reduce using rule 1 (program -> statement .)
    -               reduce using rule 1 (program -> statement .)
    ZEROES          reduce using rule 1 (program -> statement .)
    EYE             reduce using rule 1 (program -> statement .)
    ONES            reduce using rule 1 (program -> statement .)
    [               reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (46) statement -> { . statement_list }
    (44) statement_list -> . statement
    (45) statement_list -> . statement_list statement
    (46) statement -> . { statement_list }
    (47) statement -> . IF ( expression ) statement
    (48) statement -> . IF ( expression ) statement ELSE statement
    (49) statement -> . PRINT list ;
    (51) statement -> . WHILE ( expression ) statement
    (52) statement -> . FOR ID = range statement
    (53) statement -> . BREAK ;
    (54) statement -> . CONTINUE ;
    (55) statement -> . RETURN expression ;
    (56) statement -> . expression ;
    (3) expression -> . ID
    (4) expression -> . INTNUM
    (5) expression -> . FLOATNUM
    (6) expression -> . STRING
    (7) expression -> . - expression
    (8) expression -> . expression + expression
    (9) expression -> . expression - expression
    (10) expression -> . expression * expression
    (11) expression -> . expression / expression
    (12) expression -> . expression TRANSPOSE
    (13) expression -> . ZEROES ( expression )
    (14) expression -> . EYE ( expression )
    (15) expression -> . ONES ( expression )
    (16) expression -> . ID = expression
    (17) expression -> . ID SUBASSIGN expression
    (18) expression -> . ID ADDASSIGN expression
    (19) expression -> . ID MLPASSIGN expression
    (20) expression -> . ID DIVASSIGN expression
    (21) expression -> . ID [ expression ] = expression
    (22) expression -> . ID [ expression ] SUBASSIGN expression
    (23) expression -> . ID [ expression ] ADDASSIGN expression
    (24) expression -> . ID [ expression ] MLPASSIGN expression
    (25) expression -> . ID [ expression ] DIVASSIGN expression
    (26) expression -> . ID [ expression , expression ] = expression
    (27) expression -> . ID [ expression , expression ] SUBASSIGN expression
    (28) expression -> . ID [ expression , expression ] ADDASSIGN expression
    (29) expression -> . ID [ expression , expression ] MLPASSIGN expression
    (30) expression -> . ID [ expression , expression ] DIVASSIGN expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMLP expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NE expression
    (37) expression -> . expression > expression
    (38) expression -> . expression GOE expression
    (39) expression -> . expression < expression
    (40) expression -> . expression LOE expression
    (41) expression -> . [ list ]

    {               shift and go to state 3
    IF              shift and go to state 4
    PRINT           shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    RETURN          shift and go to state 12
    ID              shift and go to state 9
    INTNUM          shift and go to state 13
    FLOATNUM        shift and go to state 14
    STRING          shift and go to state 15
    -               shift and go to state 16
    ZEROES          shift and go to state 17
    EYE             shift and go to state 18
    ONES            shift and go to state 19
    [               shift and go to state 20

    statement_list                 shift and go to state 22
    statement                      shift and go to state 23
    expression                     shift and go to state 5

state 4

    (47) statement -> IF . ( expression ) statement
    (48) statement -> IF . ( expression ) statement ELSE statement

    (               shift and go to state 24


state 5

    (56) statement -> expression . ;
    (8) expression -> expression . + expression
    (9) expression -> expression . - expression
    (10) expression -> expression . * expression
    (11) expression -> expression . / expression
    (12) expression -> expression . TRANSPOSE
    (31) expression -> expression . DOTADD expression
    (32) expression -> expression . DOTSUB expression
    (33) expression -> expression . DOTMLP expression
    (34) expression -> expression . DOTDIV expression
    (35) expression -> expression . EQ expression
    (36) expression -> expression . NE expression
    (37) expression -> expression . > expression
    (38) expression -> expression . GOE expression
    (39) expression -> expression . < expression
    (40) expression -> expression . LOE expression

    ;               shift and go to state 25
    +               shift and go to state 26
    -               shift and go to state 27
    *               shift and go to state 28
    /               shift and go to state 29
    TRANSPOSE       shift and go to state 30
    DOTADD          shift and go to state 31
    DOTSUB          shift and go to state 32
    DOTMLP          shift and go to state 33
    DOTDIV          shift and go to state 34
    EQ              shift and go to state 35
    NE              shift and go to state 36
    >               shift and go to state 37
    GOE             shift and go to state 38
    <               shift and go to state 39
    LOE             shift and go to state 40


state 6

    (49) statement -> PRINT . list ;
    (42) list -> . expression
    (43) list -> . list , expression
    (3) expression -> . ID
    (4) expression -> . INTNUM
    (5) expression -> . FLOATNUM
    (6) expression -> . STRING
    (7) expression -> . - expression
    (8) expression -> . expression + expression
    (9) expression -> . expression - expression
    (10) expression -> . expression * expression
    (11) expression -> . expression / expression
    (12) expression -> . expression TRANSPOSE
    (13) expression -> . ZEROES ( expression )
    (14) expression -> . EYE ( expression )
    (15) expression -> . ONES ( expression )
    (16) expression -> . ID = expression
    (17) expression -> . ID SUBASSIGN expression
    (18) expression -> . ID ADDASSIGN expression
    (19) expression -> . ID MLPASSIGN expression
    (20) expression -> . ID DIVASSIGN expression
    (21) expression -> . ID [ expression ] = expression
    (22) expression -> . ID [ expression ] SUBASSIGN expression
    (23) expression -> . ID [ expression ] ADDASSIGN expression
    (24) expression -> . ID [ expression ] MLPASSIGN expression
    (25) expression -> . ID [ expression ] DIVASSIGN expression
    (26) expression -> . ID [ expression , expression ] = expression
    (27) expression -> . ID [ expression , expression ] SUBASSIGN expression
    (28) expression -> . ID [ expression , expression ] ADDASSIGN expression
    (29) expression -> . ID [ expression , expression ] MLPASSIGN expression
    (30) expression -> . ID [ expression , expression ] DIVASSIGN expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMLP expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NE expression
    (37) expression -> . expression > expression
    (38) expression -> . expression GOE expression
    (39) expression -> . expression < expression
    (40) expression -> . expression LOE expression
    (41) expression -> . [ list ]

    ID              shift and go to state 9
    INTNUM          shift and go to state 13
    FLOATNUM        shift and go to state 14
    STRING          shift and go to state 15
    -               shift and go to state 16
    ZEROES          shift and go to state 17
    EYE             shift and go to state 18
    ONES            shift and go to state 19
    [               shift and go to state 20

    list                           shift and go to state 41
    expression                     shift and go to state 42

state 7

    (51) statement -> WHILE . ( expression ) statement

    (               shift and go to state 43


state 8

    (52) statement -> FOR . ID = range statement

    ID              shift and go to state 44


state 9

    (3) expression -> ID .
    (16) expression -> ID . = expression
    (17) expression -> ID . SUBASSIGN expression
    (18) expression -> ID . ADDASSIGN expression
    (19) expression -> ID . MLPASSIGN expression
    (20) expression -> ID . DIVASSIGN expression
    (21) expression -> ID . [ expression ] = expression
    (22) expression -> ID . [ expression ] SUBASSIGN expression
    (23) expression -> ID . [ expression ] ADDASSIGN expression
    (24) expression -> ID . [ expression ] MLPASSIGN expression
    (25) expression -> ID . [ expression ] DIVASSIGN expression
    (26) expression -> ID . [ expression , expression ] = expression
    (27) expression -> ID . [ expression , expression ] SUBASSIGN expression
    (28) expression -> ID . [ expression , expression ] ADDASSIGN expression
    (29) expression -> ID . [ expression , expression ] MLPASSIGN expression
    (30) expression -> ID . [ expression , expression ] DIVASSIGN expression

  ! shift/reduce conflict for [ resolved as shift
    ;               reduce using rule 3 (expression -> ID .)
    +               reduce using rule 3 (expression -> ID .)
    -               reduce using rule 3 (expression -> ID .)
    *               reduce using rule 3 (expression -> ID .)
    /               reduce using rule 3 (expression -> ID .)
    TRANSPOSE       reduce using rule 3 (expression -> ID .)
    DOTADD          reduce using rule 3 (expression -> ID .)
    DOTSUB          reduce using rule 3 (expression -> ID .)
    DOTMLP          reduce using rule 3 (expression -> ID .)
    DOTDIV          reduce using rule 3 (expression -> ID .)
    EQ              reduce using rule 3 (expression -> ID .)
    NE              reduce using rule 3 (expression -> ID .)
    >               reduce using rule 3 (expression -> ID .)
    GOE             reduce using rule 3 (expression -> ID .)
    <               reduce using rule 3 (expression -> ID .)
    LOE             reduce using rule 3 (expression -> ID .)
    ,               reduce using rule 3 (expression -> ID .)
    ]               reduce using rule 3 (expression -> ID .)
    )               reduce using rule 3 (expression -> ID .)
    :               reduce using rule 3 (expression -> ID .)
    {               reduce using rule 3 (expression -> ID .)
    IF              reduce using rule 3 (expression -> ID .)
    PRINT           reduce using rule 3 (expression -> ID .)
    WHILE           reduce using rule 3 (expression -> ID .)
    FOR             reduce using rule 3 (expression -> ID .)
    BREAK           reduce using rule 3 (expression -> ID .)
    CONTINUE        reduce using rule 3 (expression -> ID .)
    RETURN          reduce using rule 3 (expression -> ID .)
    ID              reduce using rule 3 (expression -> ID .)
    INTNUM          reduce using rule 3 (expression -> ID .)
    FLOATNUM        reduce using rule 3 (expression -> ID .)
    STRING          reduce using rule 3 (expression -> ID .)
    ZEROES          reduce using rule 3 (expression -> ID .)
    EYE             reduce using rule 3 (expression -> ID .)
    ONES            reduce using rule 3 (expression -> ID .)
    =               shift and go to state 45
    SUBASSIGN       shift and go to state 46
    ADDASSIGN       shift and go to state 47
    MLPASSIGN       shift and go to state 48
    DIVASSIGN       shift and go to state 49
    [               shift and go to state 50

  ! [               [ reduce using rule 3 (expression -> ID .) ]


state 10

    (53) statement -> BREAK . ;

    ;               shift and go to state 51


state 11

    (54) statement -> CONTINUE . ;

    ;               shift and go to state 52


state 12

    (55) statement -> RETURN . expression ;
    (3) expression -> . ID
    (4) expression -> . INTNUM
    (5) expression -> . FLOATNUM
    (6) expression -> . STRING
    (7) expression -> . - expression
    (8) expression -> . expression + expression
    (9) expression -> . expression - expression
    (10) expression -> . expression * expression
    (11) expression -> . expression / expression
    (12) expression -> . expression TRANSPOSE
    (13) expression -> . ZEROES ( expression )
    (14) expression -> . EYE ( expression )
    (15) expression -> . ONES ( expression )
    (16) expression -> . ID = expression
    (17) expression -> . ID SUBASSIGN expression
    (18) expression -> . ID ADDASSIGN expression
    (19) expression -> . ID MLPASSIGN expression
    (20) expression -> . ID DIVASSIGN expression
    (21) expression -> . ID [ expression ] = expression
    (22) expression -> . ID [ expression ] SUBASSIGN expression
    (23) expression -> . ID [ expression ] ADDASSIGN expression
    (24) expression -> . ID [ expression ] MLPASSIGN expression
    (25) expression -> . ID [ expression ] DIVASSIGN expression
    (26) expression -> . ID [ expression , expression ] = expression
    (27) expression -> . ID [ expression , expression ] SUBASSIGN expression
    (28) expression -> . ID [ expression , expression ] ADDASSIGN expression
    (29) expression -> . ID [ expression , expression ] MLPASSIGN expression
    (30) expression -> . ID [ expression , expression ] DIVASSIGN expression
    (31) expression -> . expression DOTADD expression
    (32) expression -> . expression DOTSUB expression
    (33) expression -> . expression DOTMLP expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NE expression
    (37) expression -> . expression > expression
    (38) expression -> . expression GOE expression
    (39) expression -> . expression < expression
    (40) expression -> . expression LOE expression
    (41) expression -> . [ list ]

    ID              shift and go to state 9
    INTNUM          shift and go to state 13
    FLOATNUM        shift and go to state 14
    STRING          shift and go to state 15
    -               shift and go to state 16
    ZEROES          shift and go to state 17
    EYE             shift and go to state 18
    ONES            shift and go to state 19
    [               shift and go to state 20

    expression                     shift and go to state 53

state 13

    (4) expression -> INTNUM .

    ;               reduce using rule 4 (expression -> INTNUM .)
    +               reduce using rule 4 (expression -> INTNUM .)
    -               reduce using rule 4 (expression -> INTNUM .)
    *               reduce using rule 4 (expression -> INTNUM .)
    /               reduce using rule 4 (expression -> INTNUM .)
    TRANSPOSE       reduce using rule 4 (expression -> INTNUM .)
    DOTADD          reduce using rule 4 (expression -> INTNUM .)
    DOTSUB          reduce using rule 4 (expression -> INTNUM .)
    DOTMLP          reduce using rule 4 (expression -> INTNUM .)
    DOTDIV          reduce using rule 4 (expression -> INTNUM .)
    EQ              reduce using rule 4 (expression -> INTNUM .)
    NE              reduce using rule 4 (expression -> INTNUM .)
    >               reduce using rule 4 (expression -> INTNUM .)
    GOE             reduce using rule 4 (expression -> INTNUM .)
    <               reduce using rule 4 (expression -> INTNUM .)
    LOE             reduce using rule 4 (expression -> INTNUM .)
    ,               reduce using rule 4 (expression -> INTNUM .)
    ]               reduce using rule 4 (expression -> INTNUM .)
    )               reduce using rule 4 (expression -> INTNUM .)
    :               reduce using rule 4 (expression -> INTNUM .)
    {               reduce using rule 4 (expression -> INTNUM .)
    IF              reduce using rule 4 (expression -> INTNUM .)
    PRINT           reduce using rule 4 (expression -> INTNUM .)
    WHILE           reduce using rule 4 (expression -> INTNUM .)
    FOR             reduce using rule 4 (expression -> INTNUM .)
    BREAK           reduce using rule 4 (expression -> INTNUM .)
    CONTINUE        reduce using rule 4 (expression -> INTNUM .)
    RETURN          reduce using rule 4 (expression -> INTNUM .)
    ID              reduce using rule 4 (expression -> INTNUM .)
    INTNUM          reduce using rule 4 (expression -> INTNUM .)
    FLOATNUM        reduce using rule 4 (expression -> INTNUM .)
    STRING          reduce using rule 4 (expression -> INTNUM .)
    ZEROES          reduce using rule 4 (expression -> INTNUM .)
    EYE             reduce using rule 4 (expression -> INTNUM .)
    ONES            reduce using rule 4 (expression -> INTNUM .)
    [               reduce using rule 4 (expression -> INTNUM .)


state 14

    (5) expression -> FLOATNUM .
